# faux_refine

./: Cargo.toml  LICENSE  README.md
crates/faux_refine/: Cargo.toml
crates/faux_refine/src/: lib.rs
crates/faux_refine_core/: Cargo.toml
crates/faux_refine_core/src/: lib.rs  refined.rs
crates/faux_refine_core/src/predicate/: bitset.rs  list.rs  validator.rs
crates/faux_refine_core/src/proof/: bitset.rs  list.rs  mod.rs  validator.rs
crates/faux_refine_derive/: Cargo.toml
crates/faux_refine_derive/src/: lib.rs
examples/: linear_algebra.rs  valided_int.rs  valided_number.rs
