[package]
name = "faux-refine"
version = "0.2.0"
edition = "2024"
authors = ["asobi"]
description = "A crate that implements a pseudo-Refinement Type in Rust."
readme = "../../README.md"
keywords = ["refinement", "newtype", "validation", "faux-refine"]
categories = ["rust-patterns"]
repository = "https://github.com/asobininn/faux_refine"
license = "MIT"

[dependencies]
faux-refine-core = { version = "0.2.0", path = "../faux_refine_core" }
faux-refine-derive = { version = "0.2.0", path = "../faux_refine_derive", optional = true }

[features]
derive = ["faux-refine-derive"]
